force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__Address__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>