force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__City__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>