force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Employments</relationshipLabel>
    <relationshipName>ContactEmployments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>