force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ps__Country</valueSetName>
    </valueSet>
</CustomField>