force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>