force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__EmployerPhone__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EmployerPhone__c</fullName>
    <label>Employer Phone</label>
    <type>Phone</type>
</CustomField>