force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__HoursPerWeek__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HoursPerWeek__c</fullName>
    <label>Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>