force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__IsCurrentEmployment__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsCurrentEmployment__c</fullName>
    <formula>If(TODAY ()&gt;= vlocity_ps__StartDate__c &amp;&amp; ( vlocity_ps__EndDate__c = null || TODAY ()&lt; vlocity_ps__EndDate__c) &amp;&amp;  vlocity_ps__IsActive__c =true, true, false)</formula>
    <label>Current Employment</label>
    <type>Checkbox</type>
</CustomField>