force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__IsPastEmployment__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsPastEmployment__c</fullName>
    <formula>If( vlocity_ps__EndDate__c &lt; TODAY(), true, false)</formula>
    <label>Past Employment</label>
    <type>Checkbox</type>
</CustomField>