force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__StartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>