force-app/main/default/objects/vlocity_ps__ContactEmployment__c/fields/vlocity_ps__StateProvinces__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StateProvinces__c</fullName>
    <label>States/Provinces</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ps__State</valueSetName>
    </valueSet>
</CustomField>